# Miss-Sirius-Assistant

./: CLAUDE.md  README.md  tmpclaude-15ed-cwd
.claude/: settings.local.json
.github/workflows/: install.yml
.nicegui/: storage-general.json
.serena/: project.yml
agent/: README_RECOVER_ACTION.md  example_usage.json  main.py  my_action.py  my_reco.py  recover_action.py  recover_helper.py  recover_state.py  states.py  utils.py
agent/arena/: __init__.py  arena_action.py  arena_helper.py  arena_reco.py
agent/battle/: battle_action.py  battle_manager.py  battle_reco.py
agent/boss/: __init__.py  boss_action.py  boss_reco.py
agent/custom/: __init__.py
agent/custom/diagnostic/: __init__.py  diagnostic_reco.py  perf_monitor.py
agent/lab/: lab_action.py  lab_manager.py  lab_reco.py
agent/recover/: recover_action.py  recover_helper.py  recover_manager.py  recover_reco.py
agent/utils/: __init__.py  common_action.py  common_func.py  common_reco.py  version_checker.py
assets/: interface.json
assets/resource/: default_pipeline.json  mfa_layout.json
assets/resource/announcement/: FAQ.md  background_click.md  v0.4.0.md  welcome.md
assets/resource/pipeline/: 世界BOSS.json  公屏发送.json  升级处理.json  实验室.json  恢复.json  意外处理.json  战斗.json  竞技场.json  诊断测试.json  跑图.json  跑图主流程.json  跑图战斗设置.json  重置统计数据.json
assets/resource/pipeline/导航/: 前往世界BOSS.json  前往地图.json  前往竞技场.json  返回主界面.json
assets/resource/pipeline/跑图/: 升级处理.json  恢复.json  战斗.json  获得卡牌处理.json  跑图主流程.json
docs/: MSA v0.3.0.docx  override.md  后台点击Hook方案规划书.md  后台点击Hook方案规划书v2.md  阶段二分析结果-MAA控制单元接口.md
docs/archive/: hook 提示词.md
docs/development_notes/: 后台方案.md  对自带构建的修改.md  打包重构规划书.md  竞技场.md
docs/learn/: README_LEARN.md  README_RECOVER_ACTION.md
hook/: CMakeLists.txt
hook/controller/: controller.cpp  injector.cpp  injector.h
hook/proxy/: control_unit.cpp  control_unit.h
hook/test/: controller_test.cpp
my_tools/: check_pipeline.py  check_priority.py
my_tools/hook/: check_maa_compat.py
my_tools/hook/maa_cache/: official_meta.json
tools/ci/: configure.py  create_background_variant.py  download_drop_core.py  generate_manifest_cache.py  install.py  install_cli.py
